--- a/index.html
+++ b/index.html
@@ -15,18 +15,14 @@
   <div id="showDetails"></div>
   <p id="releaseTime"></p>
 
-<label for="showTimeZone">Show's Time Zone:</label>
-<select id="showTimeZone"></select>
 <br>
 <label for="localTimeZone">Your Time Zone:</label>
 <select id="localTimeZone"></select>
 <br>
-<input type="text" id="testTime" placeholder="Test Time" />
-
 <button id="convertBtn">Convert Time</button>
+<p id="convertedTime"></p>
 
 
-  <pre id="output"></pre>
   <script src="app.js"></script>
 </body>
 </html>
