--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Show Release Time Finder</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
   <h1>Find Your Show's Release Time</h1>
@@ -22,6 +22,6 @@
 <p id="convertedTime"></p>
 
 
-  <script src="app.js"></script>
+  <script src="/app.js"></script>
 </body>
 </html>
