--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,11 @@
 <!DOCTYPE html>
+
+<!--
+Welcome and thanks for having a look!
+
+- Daniel
+-->
+
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -20,7 +27,6 @@
 <br>
 <button id="convertBtn">Convert Time</button>
 <p id="convertedTime"></p>
-
 
 <script src="/app.js"></script>
 </body>
