--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <!--
-Welcome and thanks for having a look!
+Welcome and thanks for having a look ;)
 
 - Daniel
 -->
@@ -11,23 +11,28 @@ Welcome and thanks for having a look!
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Show Release Time Finder</title>
-  <link rel="stylesheet" href="/styles.css">
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <h1>Find Your Show's Release Time</h1>
-  
-  <input type="text" id="showSearch" placeholder="Search for a show..." />
-  <button id="searchBtn">Search</button>
+  <main>
+    <h1>Find Your Show's Release Time</h1>
+    
+    <input type="text" id="showSearch" placeholder="Search for a show..." />
+    <button id="searchBtn">Search</button>
 
-  <p id="releaseTime"></p>
+    <p id="releaseTime"></p>
 
-<br>
-<label for="localTimeZone">Your Time Zone:</label>
-<select id="localTimeZone"></select>
-<br>
-<button id="convertBtn">Convert Time</button>
-<p id="convertedTime"></p>
-
-<script src="/app.js"></script>
+    <br>
+    <label for="localTimeZone">Your Time Zone:</label>
+    <br>
+    <select id="localTimeZone"></select>
+    <br>
+    <button id="convertBtn">Convert Time</button>
+    <p id="convertedTime"></p>
+  </main>
+  <script src="app.js"></script>
 </body>
+<footer>
+  <p> © 2025 Release Time | Built by <a href = "https://github.com/danieltsam">danieltsam</a></p>
+</footer>
 </html>
